<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg"
        app:tintMode="multiply" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/main_setUserId_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/editText_setUserId"
                android:inputType="textPersonName"
                android:shadowColor="@color/colorShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/main_trackEventName_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/track_eventName"
                    android:inputType="textPersonName"
                    android:shadowColor="@color/colorShadow"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="6"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/main_trackEventValue_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/track_value"
                    android:inputType="numberDecimal"
                    android:shadowColor="@color/colorShadow"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="6"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/main_trackEventParams_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:hint="@string/track_params"
                android:shadowColor="@color/colorShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/main_attributeName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/setUserAttributes_attributeName"
                android:inputType="textPersonName"
                android:shadowColor="@color/colorShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/main_attributeValue_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/setUserAttributes_attributeValue"
                android:inputType="textPersonName"
                android:shadowColor="@color/colorShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_setUserId_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:shadowColor="@color/colorShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:text="@string/button_setUserId"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

            <Button
                android:id="@+id/main_track_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="trackEvent"
                android:shadowColor="@color/colorShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:text="@string/button_track"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/main_attribute_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:shadowColor="@color/colorShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:text="@string/button_setUserAttributes"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/main_state_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:checked="false"
        android:fontFamily="sans-serif-condensed"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:switchPadding="15dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/main_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/appName"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_state1_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/state1"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_state_switch"
        app:layout_constraintEnd_toStartOf="@+id/main_state_switch"
        app:layout_constraintTop_toTopOf="@+id/main_state_switch" />

    <TextView
        android:id="@+id/main_state2_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/state2"
        android:textColor="@color/colorTextHint"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_state_switch"
        app:layout_constraintStart_toEndOf="@+id/main_state_switch"
        app:layout_constraintTop_toTopOf="@+id/main_state_switch" />


</androidx.constraintlayout.widget.ConstraintLayout>